static/style.css
/* *
{
	margin: 0;
	padding: 0;
} */
body{
	background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url(images/background.jpg);
	background-position: center;
	background-size: cover;
}
.logo{
	width: 300px;
	margin-top: 18px;
}
.header{
	height : 10%;
}
.header-btn{
	text-decoration: : none !important;
	border-radius: 50px;
	padding: 7px 20px;
	float: right;
	margin-top: 35px;
	color: #fff !important;
	background: #094793;
	font-weight: 600;
}
.movie-details{
	margin: 3% 0
}
.left-box{
	color: white;
	margin: 15px 0;
	padding: 20px;
}
.casting img{
	height: 60px;
	width: 60px;
	margin-right: 10px;
	cursor: pointer;
}

.left-box a {
	text-decoration: : none !important;
	border-radius: 30px;
	padding: 7px 10px;
	margin-top: 15px;
	color: #fff !important;
	background: #094793;
	font-weight: 600;
	display: inline-block;
	margin-right: 10px;
}
.watch2-btn{
	border: 1px solid #fff !important;
	background: transparent !important;
}
.fa{
	margin: 0 5px;
}
.movie-img{
	height: 350px;
	box-shadow: -7px 7px 7px 0 #111112;
}
.series h3{
	color: white;
}
.series img{
	width: 100%;
	margin-top: 15px;
	box-shadow: -7px 7px 7px 0 #000000;
	cursor: pointer;
	margin-bottom: 100px;

}
.series img:hover{
	transform: translateY(-10px);

}
.player{
	display: flex;
	justify-content: center;
	align-items: center;
	margin-top: 50px;
}

.player video{
	width: 100%;
	max-width: 800px;
}

